--- a/css/_features.scss
+++ b/css/_features.scss
@@ -23,6 +23,7 @@
 
             width: 60%;
             font-size: 1.6rem;
+            color: $secondary-fontcolor;
         }
 
     }
@@ -43,6 +44,7 @@
                 
                 span{
                     padding: .5rem 2rem;
+                    max-height: 3.5rem;
                     color: white;
                     font-size: 1.6rem;
                     font-weight: 500;
@@ -61,6 +63,7 @@
 
                 font-size: 1.5rem;
                 margin-left: 7rem;
+                color: $secondary-fontcolor;
             }
         }
     }
