--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,4 +1,4 @@
-header {
+.menu-toggle {
 
     width: 100%;
     display: flex;
@@ -23,5 +23,6 @@ header {
             color: rgb(110, 110, 133);
 
         }
-    }  
+    }
+      
 }
