--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ a:visited {
   color: inherit;
 }
 
-header {
+.menu-toggle {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -42,7 +42,7 @@ header {
   padding: 3rem 0;
 }
 
-header .nav {
+.menu-toggle .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,7 +58,7 @@ header .nav {
   cursor: pointer;
 }
 
-header .nav .nav-item:hover {
+.menu-toggle .nav .nav-item:hover {
   color: #6e6e85;
 }
 
@@ -241,7 +241,7 @@ header .nav .nav-item:hover {
 
 @media (max-width: 1080px) {
   .hero, .features, .testimonial {
-    max-width: 850px;
+    max-width: 750px;
   }
   .hero .col-left h1, .features .col-left h1, .testimonial .col-left h1 {
     font-size: 3.5rem;
@@ -268,6 +268,114 @@ header .nav .nav-item:hover {
         -ms-grid-row-align: center;
         align-self: center;
     width: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+  .hero {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hero .col-left {
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 10rem;
+  }
+  .hero .col-left h1 {
+    width: 50%;
+  }
+  .hero .col-right img {
+    width: 60rem;
+  }
+  footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10rem;
+  }
+  html {
+    font-size: 52.5%;
+  }
+  .menu-toggle .nav {
+    display: none;
+  }
+  .menu-toggle .hamburger {
+    width: 30px;
+    height: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    cursor: pointer;
+  }
+  .menu-toggle .hamburger span {
+    display: block;
+    height: 3px;
+    width: 100%;
+    background-color: #202C52;
+    -webkit-transition-duration: .4s;
+            transition-duration: .4s;
+  }
+  .menu-toggle-on {
+    background-color: #FFF0EB;
+    height: 120vh;
+    position: absolute;
+    top: -6rem;
+    left: 0;
+    padding: 10rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-transition: .7s;
+    transition: .7s;
+  }
+  .menu-toggle-on .btn {
+    display: none;
+  }
+  .menu-toggle-on .navbar-logo {
+    display: none;
+  }
+  .menu-toggle-on .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 4rem;
+    -ms-flex-item-align: center;
+        align-self: center;
+    width: 80%;
+    margin: auto;
+  }
+  .menu-toggle-on .hamburger .one {
+    -webkit-transform: rotate(45deg) translate(7px, 7px);
+            transform: rotate(45deg) translate(7px, 7px);
+  }
+  .menu-toggle-on .hamburger .two {
+    opacity: 0;
+  }
+  .menu-toggle-on .hamburger .three {
+    -webkit-transform: rotate(-45deg) translate(5px, -5px);
+            transform: rotate(-45deg) translate(5px, -5px);
   }
 }
 
