--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -46,6 +46,10 @@
             }
         }
     }
+
+    .detail {
+        display: none;
+    }
 }
 
 @media (max-width: 800px) {
@@ -106,11 +110,12 @@
     .menu-toggle-on {
 
         background-color: $orange3;
-        height: 120vh;
+        height: 100vh;
         position: absolute;
-        top: -6rem;
+        top: 0;
+        margin: 0;
         left: 0;
-        padding: 10rem;
+        padding: 8rem;
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
@@ -152,4 +157,45 @@
 
     }
 
+    .testimonial .test-card .avatar{
+
+        width: 10rem;
+
+    }
+
 }
+
+@media (max-width: 600px) { 
+
+    html {
+
+        font-size: 68.5%;
+    }
+
+header {
+
+    .btn {
+        display: none;
+    }
+
+}
+
+.hero .col-right img {
+
+    width: 40rem;
+}
+
+.testimonial {
+
+    display: flex;
+    flex-direction: column;
+
+    .test-card {
+
+        width: 70%;
+        margin-bottom: 2rem;
+    }
+}
+
+}
+
