--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -115,11 +115,15 @@
         top: 0;
         margin: 0;
         left: 0;
-        padding: 8rem;
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
         transition: .7s;
+
+        .hamburger {
+
+            transform: translate(-6rem, 1rem);
+        }
     
 
         .btn {
@@ -134,7 +138,7 @@
         .nav {
             display: flex;
             flex-direction: column;
-            font-size: 4rem;
+            font-size: 3.5rem;
             align-self: center;
             width: 80%;
             margin: auto;
