--- a/css/main.css
+++ b/css/main.css
@@ -334,7 +334,6 @@ a:visited {
     top: 0;
     margin: 0;
     left: 0;
-    padding: 8rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -346,6 +345,10 @@ a:visited {
             align-items: flex-start;
     -webkit-transition: .7s;
     transition: .7s;
+  }
+  .menu-toggle-on .hamburger {
+    -webkit-transform: translate(-6rem, 1rem);
+            transform: translate(-6rem, 1rem);
   }
   .menu-toggle-on .btn {
     display: none;
@@ -361,7 +364,7 @@ a:visited {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    font-size: 4rem;
+    font-size: 3.5rem;
     -ms-flex-item-align: center;
         align-self: center;
     width: 80%;
